02-helm-deployments/Insight/insight-k8s-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: insight-web
  namespace: kta
spec:
  replicas: 0
  selector:
    matchLabels:
      app: insight-web
  template:
    metadata:
      labels:
        app: insight-web
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": windows
      containers:
        - name: insight-web
          image: sampleacr.azurecr.io/insightweb:v6.4
          resources:
            requests:
              cpu: 0.5
              memory: 1024M
            limits:
              cpu: 1
              memory: 2048M
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: "D:"
              name: insight-data-azurefile
      #imagePullSecrets:
      #  - name: regcred
      volumes:
        - name: insight-data-azurefile
          persistentVolumeClaim:
            claimName: insight-data-azurefile
      tolerations:
      - key: "kubernetes.azure.com/scalesetpriority"
        operator: "Equal"
        value: "spot"
        effect: "NoSchedule"
---
apiVersion: v1
kind: Service
metadata:
  name: insight-web
  namespace: kta
spec:
  #type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: insight-web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: insight-scheduler
  namespace: kta
spec:
  replicas: 1
  selector:
    matchLabels:
      app: insight-scheduler
  template:
    metadata:
      labels:
        app: insight-scheduler
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": windows
      containers:
        - name: insight-scheduler
          image: sampleacr.azurecr.io/insightscheduler:v6.4
          resources:
            requests:
              cpu: 0.2
              memory: 1024M
            limits:
              cpu: 0.6
              memory: 2048M
          ports:
            - containerPort: 13640
              name: scheduler
          volumeMounts:
            - mountPath: "D:"
              name: insight-data-azurefile
      #imagePullSecrets:
      #  - name: regcred
      volumes:
        - name: insight-data-azurefile
          persistentVolumeClaim:
            claimName: insight-data-azurefile
      tolerations:
      - key: "kubernetes.azure.com/scalesetpriority"
        operator: "Equal"
        value: "spot"
        effect: "NoSchedule"
---
apiVersion: v1
kind: Service
metadata:
  name: insight-scheduler
  namespace: kta
spec:
  selector:
    app: insight-scheduler
  ports:
    - port: 13640
